make burger menu dark and visible and fix display/padding of mobile menu li items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,8 @@ header {
 
 li {
     font-size: 1.3rem;
-    display: inline-block;
-    padding: 65px 50px 50px 0px;
+    display: block;
+    padding: 20px;
 }
 
 a {
@@ -249,6 +249,10 @@ a:hover {
 
 
 @media screen and (min-width: 992px) {
+    li {
+        padding: 65px 50px 50px 0px;
+    }
+
     .about {
         flex-direction: row;
         justify-content: end;
